# pepecore

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-pypi.yml  release.yml
crates/pepecore/: Cargo.toml
crates/pepecore-array/: Cargo.toml
crates/pepecore-array/src/: error.rs  lib.rs
crates/pepecore-array/src/type_convert/: f32_to.rs  u16_to.rs  u8_to.rs
crates/pepecore-py-bindings/: Cargo.toml  pepeline.pyi  pyproject.toml
crates/pepecore-py-bindings/python/pepecore/: __init__.py  __init__.pyi  resize.pyi  rw.pyi
crates/pepecore-py-bindings/src/: lib.rs  pyimage.rs  read.rs  resize.rs  rw.rs  save.rs  utility.rs
crates/pepecore-py-bindings/src/ops/: mod.rs  read_write.rs
crates/pepecore-py-bindings/src/structure/: svec_traits.rs
crates/pepecore-resize/: Cargo.toml
crates/pepecore-resize/src/: error.rs  lib.rs  utility.rs
crates/pepecore-resize/src/interpolation/: mod.rs  nearest_neighbour.rs
crates/pepecore/src/: enums.rs  errors.rs  lib.rs
crates/pepecore/src/ops/read/: read.rs
crates/pepecore/src/ops/save/: save.rs
crates/pepecore/src/ops/svec_ops/: color_levels.rs  crop.rs  mod.rs
crates/pepecore/src/ops/svec_ops/cvtcolor/: cvt.rs  cvt_color.rs  cvt_u16.rs
crates/pepecore/src/ops/svec_ops/halftone/: dot.rs  halftone.rs  screentone.rs
pepecore/: Cargo.toml
pepecore-array/: Cargo.toml
pepecore-array/src/: lib.rs
pepecore-array/src/type_convert/: mod.rs  u16_to.rs  u8_to.rs
pepecore-py-bindings/: Cargo.toml  pepeline.pyi  pyproject.toml
pepecore-py-bindings/src/: lib.rs
pepecore-py-bindings/src/ops/: colors.rs  crop.rs  encode.rs  get_palette.rs  lines.rs  mod.rs  noise.rs  normalize.rs  old_rebind.rs  original_size.rs  read_write.rs  resize.rs
pepecore-py-bindings/src/structure/: enums.rs  mod.rs  svec_traits.rs
pepecore/src/: enums.rs  errors.rs  global_params.rs  lib.rs
pepecore/src/ops/: encode.rs  mod.rs
pepecore/src/ops/read/: decode.rs  mod.rs  read.rs
pepecore/src/ops/save/: save.rs
pepecore/src/ops/svec_ops/: color_levels.rs  crop.rs  mod.rs  normalize.rs  real_size.rs
pepecore/src/ops/svec_ops/cvtcolor/: constants.rs  cvt.rs  cvt_color.rs  cvt_f32.rs  cvt_u16.rs  cvt_u8.rs  lut.rs  mod.rs
pepecore/src/ops/svec_ops/halftone/: halftone.rs  mod.rs  screentone.rs  utils.rs
pepecore/src/ops/svec_ops/jpeg/: encode.rs  fdct.rs  mod.rs  quantize.rs  ycbcr.rs
pepecore/src/ops/svec_ops/line/: bezier.rs  bresenham.rs  line_draw.rs  mod.rs  objects.rs
pepecore/src/ops/svec_ops/noise/: fast_noise_lite.rs  mod.rs
pepecore/src/ops/svec_ops/palette_gen/: gen_palette.rs  median_cut.rs  min_max_uniform.rs  mod.rs  octree_si.rs  wu_color.rs
pepecore/src/ops/svec_ops/resize/: fir.rs  mod.rs
src/: enums.rs  errors.rs  lib.rs
src/array/: mod.rs  svec.rs
src/array/type_convert/: f32_to.rs  u16_to.rs  u8_to.rs
src/ops/: mod.rs
src/ops/cvtcolor/: cvt_color.rs  cvt_f32.rs  cvt_u8.rs  mod.rs
src/ops/read/: decode.rs  mod.rs  read.rs
src/ops/save/: save.rs
src/ops/svec_ops/: mod.rs
src/ops/svec_ops/cvtcolor/: cvt.rs  cvt_color.rs  cvt_u16.rs  cvt_u8.rs
src/ops/svec_ops/halftone/: dot.rs  halftone.rs  mod.rs  screentone.rs  utils.rs
