[package]
name = "pepecore"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/rewaifu/pepecore"
license = "MIT"

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
pepecore = { path = "." }

[dependencies]
filebuffer = "1.0.0"
image = "0.25.6"
thiserror = "2.0.12"
zune-core = "0.5.0-rc2"
zune-psd = "0.5.0-rc0"
