[package]
name = "pepecore-py-bindings"
version = "1.0.0-beta.1"
edition.workspace = true
publish.workspace = true

[dependencies]
libc = "1.0.0-alpha.1"
numpy = "0.25.0"
pepecore.workspace = true
pepecore-array.workspace = true
pyo3 = { version = "0.25.1", features = ["abi3-py310", "extension-module"] }
rayon = "1.10.0"

[lib]
name = "pepeline"
crate-type = ["cdylib"]

[tool.uv]
cache-keys = [{ file = "Cargo.toml" }, { file = "pyproject.toml" }, { dir = "src" }]
