[project]
name = "pepeline"
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed"
]
requires-python = ">=3.10"
dependencies = [
    "numpy>2",
]

[project.urls]
repository = "https://github.com/rewaifu/pepecore"

[tool.maturin]
profile = "release"
strip = true

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"