[package]
name = "pepecore"
version = "0.2.0"
edition.workspace = true
publish = true
repository = "https://github.com/rewaifu/pepecore"
license = "MIT"
readme = "../README.md"
authors = ["rewaifu"]
description = "A Rust library for image decoding, encoding, and processing using an efficient SVec data structure."
#homepage = ""
documentation = "https://docs.rs/crate/pepecore"
categories = ["multimedia::images"]
keywords = ["halftone", "screentone", "cvt_color"]

[dependencies]
filebuffer = "1.0.0"
image = "0.25.6"
pepecore-array.workspace = true
thiserror = "2.0.12"
zune-core = "0.5.0-rc2"
zune-jpegxl = "0.5.0-rc1"
zune-psd = "0.5.0-rc0"
jpeg-encoder = { version = "0.6", optional = true }

[features]
encode = ["dep:jpeg-encoder"]